# hamana

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  usage.html
.github/: copilot-instructions.md
.github/workflows/: execute-tests.yml  publish-doc.yml  publish-smokeshow.yml  publish-version.yml
config/css/: nav.css
connector/db/: exceptions.html  hamana.html  index.html  oracle.html  sqlite.html  teradata.html
connector/file/: csv.html  exceptions.html  index.html
core/: column.html  query.html
docs/: index.md  usage.md
docs/connector/db/: exceptions.md  hamana.md  index.md  oracle.md  sqlite.md  teradata.md
docs/connector/file/: csv.md  exceptions.md  index.md
docs/core/: column.md  query.md
search/: search_index.js  search_index.json
src/: requirements.txt
src/hamana/: __init__.py  query.py
src/hamana/connector/: __init__.py
src/hamana/connector/db/: __init__.py  base.py  config.py  exceptions.py  hamana.py  interface.py  oracle.py  query.py  schema.py  sqlite.py  teradata.py
src/hamana/connector/file/: __init__.py  csv.py  exceptions.py  warning.py  warnings.py
src/hamana/core/: __init__.py  column.py  db.py  exceptions.py  identifier.py  warning.py
src/hamana/db/connector/: exceptions.py  interface.py  oracle.py
tests/: init_test.py  init_test_db.py  requirements.txt  test_connector_db_oracle.py  test_connector_db_query.py  test_connector_db_sqlite.py  test_connector_db_teradata.py  test_connector_file_csv.py  test_core.py  test_core_column.py  test_core_identifier.py
tests/data/db/: sqlite.db  test.db
